refactored to using promoType

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="shop_name">Магазин</string>
     <string name="cafe_name">Кафе/Ресторан</string>
     <string name="undefined_name">Бездна</string>
+
+    <string name="badge_name">бейдж</string>
 </resources>
