--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">Benefits</string>
 
-    <string name="navigation_tab_list">List</string>
-    <string name="navigation_tab_map">Map</string>
-    <string name="navigation_tab_news">News</string>
-    <string name="navigation_tab_settings">Settings</string>
+    <string name="navigation_tab_list">Список</string>
+    <string name="navigation_tab_map">Карта</string>
+    <string name="navigation_tab_news">Новости</string>
+    <string name="navigation_tab_settings">Настройки</string>
 
     <string name="shop_name">Магазин</string>
     <string name="cafe_name">Кафе/Ресторан</string>
     <string name="undefined_name">Бездна</string>
 
     <string name="badge_name">бейдж</string>
+    
+    <string name="clip_promo_description">Промокод</string>
+    <string name="clip_promo_copied_successfully">Промокод скопирован</string>
 </resources>
